--- a/.github/workflows/kube.yaml
+++ b/.github/workflows/kube.yaml
@@ -7,10 +7,7 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1.0.0
-    - uses: victorsalaun/gh-actions@master
-      with:
-        command: |
-          kubectl version --client
-          helm version --client
-          yamllint --version
+      - uses: actions/checkout@v1.0.0
+      - uses: victorsalaun/gh-actions@master
+        with:
+          command: kubectl version --client
