update yamllint GH action

--- a/.github/workflows/yaml-lint.yaml
+++ b/.github/workflows/yaml-lint.yaml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1.0.0
-      - uses: victorsalaun/actions/yamllint@yamllint
+      - uses: victorsalaun/gh-actions/yamllint@master
