--- a/.github/workflows/kubectl.yaml
+++ b/.github/workflows/kubectl.yaml
@@ -9,3 +9,5 @@ jobs:
     steps:
       - uses: actions/checkout@v1.0.0
       - uses: victorsalaun/gh-actions/kubectl@master
+        with:
+          command: "version --client"
