--- a/.github/workflows/kubectl.yaml
+++ b/.github/workflows/kubectl.yaml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   kubectl:
     name: version
-    runs-on: macos
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v1.0.0
       - uses: victorsalaun/gh-actions/kubectl@master
